(library
  (name probNv)
  (public_name probNv)
  (modes native)
  (libraries
    probNv_lang
    probNv_datastructures
    probNv_utils
    probNv_transformations
    probNv_translate
    probNv_compile
    integers
    clap
    str
    batteries
    zarith)
  (preprocess
    (pps ppx_deriving.std))
)

(include_subdirs no)
