(library
  (name probNv_lang)
  (public_name probNv.lang)
  (libraries
    batteries
    fileutils
    ANSITerminal
    cudd
    integers
    probNv_datastructures
    probNv_utils)
  (preprocess
    (pps ppx_deriving.std ppx_deriving_argparse))
)

(menhir
  (modules Parser))

(ocamllex
  (modules Lexer))

(include_subdirs unqualified)
